revert back to jdk17
for compatibility with omnifish glassfish container